--- a/style.css
+++ b/style.css
@@ -3,23 +3,6 @@ body {
 	font-family: Oswald;
 }
 
-.navbar {
-	position: fixed;
-	top: 0;
-	width: 100%;
-	z-index: 1;
-}
-
-.content {
-	background: url("https://images.unsplash.com/photo-1528606323703-f879e36b2eb4?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=3965721adb676b587d1319326456a28c&auto=format&fit=crop&w=966&q=80");
-	background-size: cover;
-	background-repeat: no-repeat;
-	color: #fff;	
-	text-align: center;
-	padding-top: 25%;
-	padding-bottom: 10%;
-}
-
 h1 {	
 	font-size: 5em;
 	font-weight: 300;
@@ -38,12 +21,22 @@ hr {
 	width: 33%;
 }
 
-.btn {	
-	transition: all 1s;
+/*Title*/
+.navbar {
+	position: fixed;
+	top: 0;
+	width: 100%;
+	z-index: 1;
 }
 
-.btn:hover {
-	transform: scale(1.1);
+.content {
+	background: url("https://images.unsplash.com/photo-1528606323703-f879e36b2eb4?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=3965721adb676b587d1319326456a28c&auto=format&fit=crop&w=966&q=80");
+	background-size: cover;
+	background-repeat: no-repeat;
+	color: #fff;	
+	text-align: center;
+	padding-top: 25%;
+	padding-bottom: 10%;
 }
 
 .btn {
@@ -52,6 +45,15 @@ hr {
 	padding: 8px 20px;
 }
 
+.btn {	
+	transition: all 1s;
+}
+
+.btn:hover {
+	transform: scale(1.1);
+}
+
+/*Explore Section*/
 .middle-section {
 	background-color: #d7f7f5;
 }
@@ -74,6 +76,7 @@ img {
 	padding-bottom: 20px;
 }
 
+/*Sign-up Section*/
 .bottom-section {
 	background-color: #87e5da;
 	padding-bottom: 30px;
@@ -81,7 +84,8 @@ img {
 
 iframe {
 	display: block;
-	margin: 0 auto;
+	margin: 10px auto;
+	padding: 0 15px;
 }
 
 .sign-up-form p {
@@ -92,14 +96,16 @@ iframe {
 .sign-up-form {
 	display: block;
 	margin: 0 auto;
-	width: 500px;
+	padding: 0 8%;
 }
 
 .sign-up-form button {
-	margin-left: 190px;
+	display: block;
+	margin: 0 auto;
 	width: 100px;
 }
 
+/*Footer Section*/
 footer {
 	background-color: #f7aa00;
 	color: #db2d43;
